--- a/soapstore/.gitignore
+++ b/soapstore/.gitignore
@@ -1,8 +1,11 @@
 venv/
 .idea/
-.vscode/
 db.sqlite3
 __pycache__/
 0001_initial.py
 0002_product_in_cart.py
 0003_order_cart_item.py
+0004_remove_product_in_cart_remove_product_orders_and_more.py
+0005_remove_product_reviews.py
+0006_alter_product_photo.py
+0007_remove_cart_products_cart_products.py
